--- a/style.css
+++ b/style.css
@@ -165,13 +165,12 @@
 }
 
 .contactimg {
-  display: grid;
-  align-items: center; 
-  grid-template-columns: 1fr 1fr 1fr;
+  display: table;
+  text-align: center;
+  grid-template-columns: 2fr 2fr 2fr;
   column-gap: 5px;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
  }
 
  
