--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
 
 .header {
   overflow: hidden;
-  background-color: lightgrey;
-  padding:10px;
+  background-color: rgb(237, 237, 237);
+  /* padding:10px; */
   border-bottom: #68b701 solid 5px;
+  padding-top: 10px;
 }
         
 .header a {
@@ -30,18 +31,6 @@
   float: right;
   padding-top: 10px;
 }
-        
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .header-right {
-    float: none;
-  }
-}
 
 .introIMG {
   padding-top: 50px;
@@ -56,7 +45,7 @@
   position:inherit;
   /* top: 0; */
   height: 300px;
-  padding: 10px 16px;
+  /* padding: 10px 16px; */
   color: #2862cb;
   background-size: cover;
   background-position: center;
@@ -65,18 +54,18 @@
 }
 
 .banner {
-  /* background-color: orange; */
   text-align: center;
   height: 150px;
-  padding: 10px 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-position: center;
   width: 100%;
 }
 
 .button {
-  background-color: #68b701;
+  background-color: rgb(255, 185, 55);/* #68b701; */
   border: none;
-  color: #512d89;
+  color: #4b8401;
   padding: 15px 15px;
   text-align: center;
   text-decoration: none;
@@ -149,7 +138,6 @@
 .content {
   background-color: #68b7012d;
   min-height: 400px;
-  /* width: 300px; */
   padding: 10px;
   border-radius: 20%;
   margin-left: auto;
@@ -171,14 +159,15 @@
   column-gap: 5px;
   margin-left: auto;
   margin-right: auto;
- }
+}
 
  
 
- .introText {
+.introText {
   opacity: 100% !important;
   font-size: 70px;
- }
+  width: 100%;
+}
 
 .titleCard{
   text-align: center;
@@ -188,14 +177,14 @@
   background-color: #339acd12;
   padding:10px;
   border: #68b701 solid 5px;
- }
+}
 
 
 
 
 
 
- .services-container {
+.services-container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
