--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 .introIMG {
   padding-top: 50px;
   width: 100%;
-  height: 200px;
+  min-height: 250px;
   text-align: center;
   color: #000000ba;
   /* opacity: 70%; */
