--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .header {
   overflow: hidden;
   background-color: rgb(237, 237, 237);
-  border-bottom: #68b701 solid 5px;
+  border-bottom: #68b701 solid 10px;
   padding-top: 10px;
 }
         
@@ -37,7 +37,7 @@
   width: 100%;
   min-height: 250px;
   text-align: center;
-  color: #000000ba;
+  border-bottom: #68b701 solid 10px;
  }
 
 .fixedHeader {
@@ -49,6 +49,7 @@
   background-position: center;
   width: 100%;
   text-align: center;
+  border-bottom: solid 10px #68b701;
 }
 
 .banner {
@@ -74,8 +75,8 @@
 }
 
 .button:hover {
-  background-color: #4c7d0c;
-  color: #2e1754;
+  background-color: rgb(174, 127, 38);
+  color: #2c4906;
 }
 
 .column {
@@ -167,10 +168,10 @@
 
 .titleCard{
   text-align: center;
-  color: #68b701;
+  color: #ffffff;
   font-weight: bolder;
   font-size: 30px;
-  background-color: #339acd12;
+  background-color: rgb(255, 185, 55);
   padding-top: 10px;
   padding-bottom: 10px;
   border: #68b701 solid 5px;
@@ -197,7 +198,7 @@
 }
 
 .dropdown-toggle:hover {
-  background-color: #68b7012d;
+  background-color: #68b701a1;
 }
 
 .dropdown-content {
