--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .header {
   overflow: hidden;
-  background-color: rgb(237, 237, 237);
+  background-color: lightgray;
   border-bottom: #68b701 solid 10px;
   padding-top: 10px;
 }
@@ -18,7 +18,6 @@
   font-size: 18px; 
   line-height: 25px;
   border-radius: 4px;
-
 }
         
 .header a:hover {
@@ -54,8 +53,8 @@
 
 .banner {
   text-align: center;
-  height: 150px;
-  padding-top: 15px;
+  height: 300px;
+  padding-top: 50px;
   padding-bottom: 15px;
   background-position: center;
   width: 100%;
@@ -94,7 +93,9 @@
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.511);
+  background-color: aliceblue;
+  min-height: 650px;
 }
 
 .container {
@@ -110,14 +111,11 @@
 
 /* review row and column */
 
-.revRow {
-  margin: 8px -16px;
-}
 
 /* Add padding BETWEEN each column (if you want) */
 .revRow,
 .revRow > .revCol {
-  padding: 2px;
+  padding: 5px;
 }
 
 /* Create four equal columns that floats next to each other */
@@ -135,8 +133,8 @@
 
 /* Content */
 .content {
-  background-color: #68b7012d;
-  min-height: 400px;
+  background-color: #68b70155;
+  min-height: 450px;
   padding: 10px;
   border-radius: 20%;
   margin-left: auto;
@@ -206,21 +204,19 @@
   list-style: none;
   margin: 10px 0;
   padding: 0;
-  border: 1px solid #68b701;
-  border-radius: 5px;
 }
 
 .dropdown-content li {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   padding: 10px 15px;
-  border-bottom: 1px solid #68b701; /* Optional: Adds a dividing line between items */
 }
 
 .service-time {
   color: #666; /* Optional: Make the time less prominent */
   font-size: 0.9rem;
+  padding-left: 30px;
 }
 
 .dropdown-content li:last-child {
@@ -234,4 +230,5 @@
 .facialDetails {
   font-size: smaller;
   color: #666;
+  padding-left: 30px;
 }
