--- a/style.css
+++ b/style.css
@@ -31,14 +31,14 @@
 }
 
 .introIMG {
-  padding-top: 60px;
-  padding-bottom: 10px;
+  padding-top: 100px;
   width: 100%;
   min-height: 250px;
   text-align: center;
   border-bottom: #68b701 solid 10px;
- }
+}
 
+ 
 .fixedHeader {
   position:inherit;
   /* top: 0; */
@@ -95,7 +95,7 @@
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.511);
   background-color: aliceblue;
-  min-height: 650px;
+  min-height: 700px;
 }
 
 .container {
@@ -231,4 +231,49 @@
   font-size: smaller;
   color: #666;
   padding-left: 30px;
+}
+
+.topBar {
+  height: 50px;
+  background-color: gray;
+  text-align: center;
+}
+
+.smallContact {
+  color: #68b701;
+  text-decoration: none;
+  font-size: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.bottomBar {
+  min-height: 250px;
+  background-color: gray;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.aboutus {
+  min-height: 250px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 95%;
+  align-items: center;
+}
+
+.bottomInfo {
+  color: #68b701;
+  text-align: center;
+  width: 32%;
+}
+
+div {
+  line-height: 25px;
+}
+
+.storeHours {
+  height: 250px;
 }
